--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ img {
     object-fit: cover;
 }
 
-.gallary__container {
+.gallery__container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(12, min-content);
@@ -31,38 +31,18 @@ a {
     display: block;
 }
 
-.div0 { grid-area: 1 / 1 / 3 / 2; }
-.div1 { grid-area: 1 / 2 / 2 / 3; }
-.div2 { grid-area: 2 / 2 / 3 / 3; }
-.div3 { grid-area: 1 / 3 / 2 / 4; }
-.div4 { grid-area: 2 / 3 / 3 / 4; }
-.div5 { grid-area: 3 / 3 / 5 / 4; }
-.div6 { grid-area: 3 / 2 / 4 / 3; }
-.div7 { grid-area: 4 / 2 / 5 / 3; }
-.div8 { grid-area: 3 / 1 / 4 / 2; }
-.div9 { grid-area: 4 / 1 / 5 / 2; }
-.div10 { grid-area: 5 / 1 / 6 / 3; }
-.div11 { grid-area: 5 / 3 / 6 / 4; }
-.div12 { grid-area: 6 / 2 / 7 / 4; }
-.div13 { grid-area: 6 / 1 / 7 / 2; }
-.div14 { grid-area: 7 / 1 / 8 / 2; }
-.div15 { grid-area: 7 / 2 / 8 / 3; }
-.div16 { grid-area: 7 / 3 / 8 / 4; }
-.div17 { grid-area: 8 / 3 / 9 / 4; }
-.div18 { grid-area: 8 / 2 / 9 / 3; }
-.div19 { grid-area: 8 / 1 / 9 / 2; }
-.div20 { grid-area: 9 / 2 / 10 / 4; }
-.div21 { grid-area: 9 / 1 / 10 / 2; }
-.div22 { grid-area: 10 / 1 / 11 / 2; }
-.div23 { grid-area: 10 / 2 / 11 / 3; }
-.div24 { grid-area: 10 / 3 / 11 / 4; }
-.div25 { grid-area: 11 / 1 / 12 / 2; }
-.div26 { grid-area: 11 / 2 / 12 / 3; }
-.div27 { grid-area: 11 / 3 / 12 / 4; }
-.div28 { grid-area: 12 / 1 / 13 / 2; }
-.div29 { grid-area: 12 / 2 / 13 / 3; }
-.div30 { grid-area: 12 / 3 / 13 / 4; }
 
-.div13 img {
-    object-position: left;
-}
+.gallery__item:nth-child(1) { grid-area: 1 / 1 / 3 / 2; }
+.gallery__item:nth-child(2) { grid-area: 1 / 2 / 2 / 3; }
+.gallery__item:nth-child(3) { grid-area: 1 / 3 / 2 / 4; }
+.gallery__item:nth-child(4) { grid-area: 2 / 2 / 3 / 3; }
+.gallery__item:nth-child(5) { grid-area: 2 / 3 / 3 / 4; }
+.gallery__item:nth-child(6) { grid-area: 3 / 1 / 4 / 2; }
+.gallery__item:nth-child(7) { grid-area: 3 / 2 / 4 / 3; }
+.gallery__item:nth-child(8) { grid-area: 4 / 1 / 5 / 2; }
+.gallery__item:nth-child(9) { grid-area: 4 / 2 / 5 / 3; }
+.gallery__item:nth-child(10) { grid-area: 3 / 3 / 5 / 4; }
+.gallery__item:nth-child(11) { grid-area: 5 / 1 / 6 / 3; }
+.gallery__item:nth-child(12) { grid-area: 5 / 3 / 6 / 4; }
+.gallery__item:nth-child(13) { grid-area: 6 / 1 / 7 / 2; }
+.gallery__item:nth-child(14) { grid-area: 6 / 2 / 7 / 4; }
